--- a/job-search/.prettierrc.json
+++ b/job-search/.prettierrc.json
@@ -1,1 +1,6 @@
-{}
+{
+  "prettier.singleQuote": true,
+  "prettier.eslintIntegration": true,
+  "prettier.tabWidth": 4,
+  "prettier.useTabs": true
+}
