--- a/job-search/tsconfig.json
+++ b/job-search/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "tests/**/*"],
-  "exclude": [],
+  "exclude": ["node_modules", "build/**/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "ignoreDeprecations": "5.0",
+    "outDir": "build",
     "paths": {
       "@/*": ["./src/*"]
     },
